# ArduinoData

./: .gitignore  ArduinoData.pro  CMakeLists.txt  LICENSE  README.md  arduinodata.cpp  arduinodata.h  arduinodata.ui  main.cpp  plot.cpp  plot.h
src/: CMakeLists.txt  arduinodata.cpp  arduinodata.h  plot.cpp  plot.h
ui/: arduinodata.ui
